--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="row" style="margin-top: 40px;">
+  <div class="row  justify-content-center" style="margin-top: 40px;">
     <div class="col-md-6">
       <div style="max-width: 1000px;">
         <div
@@ -68,7 +68,7 @@
           data-folder="https://universal-m.ru/upload/engine/"
           data-filename="{index}.png?v1"
           data-amount="18"
-          data-ratio="5"
+          data-ratio="1"
           data-full-screen
           data-responsive="scaleflex"
         >
@@ -76,7 +76,6 @@
           <button class="cloudimage-360-next"></button>
         </div>
       </div>
-      <p class="view-360-capture">36 images, full screen</p>
     </div>
   </div>
 </div>
